tests/sim/snapshots/sim__test_scenarios__combined_signals_relief.snap
---
source: manager/tests/sim/test_scenarios.rs
expression: formatted
---
kv.evict_sliding:
  - 0
  - -0.063
  - -0
  - -0.005
  - -0.002
  - 0
