tests/sim/snapshots/sim__test_scenarios__thermal_ramp_relief.snap
---
source: manager/tests/sim/test_scenarios.rs
expression: formatted
---
throttle:
  - -0.001
  - 0.003
  - 0.001
  - 0
  - 1.449
  - 0
